0x0A-python-inheritance/tests/7-base_geometry.txt
>>> BaseGeometry = __import__('7-base_geometry').BaseGeometry
>>> bg = BaseGeometry()
>>> bg.integer_validator("my_int", 12)
>>> bg.integer_validator("width", 89)
>>> bg.integer_validator("name", "John")
Traceback (most recent call last):
    ...
TypeError: name must be an integer
>>> bg.integer_validator(68, "John")
Traceback (most recent call last):
    ...
TypeError: 68 must be an integer
>>> bg.integer_validator(68, {})
Traceback (most recent call last):
    ...
TypeError: 68 must be an integer
>>> bg.integer_validator( )
Traceback (most recent call last):
    ...
TypeError: BaseGeometry.integer_validator() missing 2 required positional arguments: 'name' and 'value'
>>> bg.integer_validator(,)
Traceback (most recent call last):
    bg.integer_validator(,)
                         ^
SyntaxError: invalid syntax
>>> bg.integer_validator(12)
Traceback (most recent call last):
    ...
TypeError: BaseGeometry.integer_validator() missing 1 required positional argument: 'value'
>>> bg.integer_validator(0, 0)
Traceback (most recent call last):
    ...
ValueError: 0 must be greater than 0
>>> bg.integer_validator(0, -3)
Traceback (most recent call last):
    ...
ValueError: 0 must be greater than 0